# dualmc

./: CMakeLists.txt
apps/example/: example.cpp
include/: dualmc.cpp  dualmc.h  dualmc_tables.tpp  edges.h  quad.h  tables.h  vertex.h
